Archive2/a1/93e7ee4a18a78f/output
main.cpp:99:6: error: expected ')'
    );
     ^
main.cpp:97:9: note: to match this '('
    test(
        ^
1 error generated.
